# fluidsim

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: FluidRenderer.hpp  OpenGLVersion.hpp  RenderPipeline.hpp  WindowConfig.hpp  WindowManager.hpp  colour.hpp  liquid.hpp  navier.hpp  vec3.hpp  vector_math.hpp
include/glad/: glad.h
shaders/: quad.frag  quad.vert
src/: FluidRenderer.cpp  RenderPipeline.cpp  WindowManager.cpp  glad.c  main.cpp  navier.cpp
